--- a/src/blazor-webapp/appsettings.json
+++ b/src/blazor-webapp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=C:\\_Data\\Github\\jblaauw\\Stuntman\\_Preview\\src\\PSStuntman\\PSStuntman\\bin\\Release\\Stuntman.db;Cache=Shared"
+    "DefaultConnection": "DataSource=C:\\_Data\\Github\\jblaauw\\Stuntman\\src\\blazor-webapp\\bin\\Debug\\net6.0\\Stuntman.db;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +10,5 @@
     }
   },
   "AllowedHosts": "*",
-  "MaxContracts":  3
+  "MaxContracts": 3
 }
